_sass/_homepage.scss
.homepage {
  @include flex-direction(column);
  @include align-items(center);
  padding-top: 0;
  
  > header {
    @include flexbox();
    @include flex-direction(column);
    @include align-self(stretch);
    background: -webkit-linear-gradient(54deg, #51D1E8 0%,#51A8E8 42%,#2C58C1 100%);
    background: linear-gradient(36deg, #51D1E8 0%,#51A8E8 42%,#2C58C1 100%);
    background-color: $header-color;
    border-bottom: 8px solid #94FFFF;
    color: white;
    margin: 0 0 80px 0;
    > .container {
      @include flexbox();
      @include flex-direction(row);
      @include justify-content(center);
      @include align-items(center);
      @include align-self(center);
      @include flex-wrap(wrap);
      max-width: $content-width;
      padding: 40px;
      > .logo {
        width: 380px;
        height: 300px;
      }
      @media(max-width: 767px) {
        >.logo {
          width: 280px;
          height: 221px;
        }
      }
      > .texts {
        padding: 0 0 40px 20px;
        > h1 {
          font-size: 48px;
          color: #94FFFF;
          font-weight: 100;
        }
        > p.subtitle {
          @include flex(1 1 200px);
          text-align: left;
          font-size: 30px;
          line-height: 40px;
          font-weight: 100;
        } 
      }
    }
  }
  .teasers {
    @include flexbox();
    @include justify-content(space-around);
    @include flex-wrap(wrap);
    margin: 0 (-$gutter-width/2);
    padding-bottom: 80px;
    > aside {
      max-width: $column-width + $gutter-width;
      @include flex(1 0 250px);
      margin: 0 $gutter-width/2;
      padding: 6px;
      @include flexbox();
      
      > svg {
        margin: 24px 12px;
        flex-shrink: 0;
        width: 72px;
        height: 72px;
      }
      
      > div > p {
        font-size: 14px;
      }
    }
    @media(max-width: 767px) {
      @include flex-direction(column);
      @include align-items(center);
      > aside {
        border-right: 0;
      }
    }
  }
  p {
//    text-align: justify;
  }
  .news-section,
  .live-demonstration {
    @include align-self(stretch);
    background: #F5F5F5;
    padding: 30px 0 60px 0;
    width: 100%;
    >.row {
      margin: 0;
    }
  }
  .why-maquette {
    
  }
  .live-demonstration {
    >.row {
      &.live-editor .col-2 {
        @include flex-shrink(1);
      }
    }
    input {
      border: 1px solid #CECECE;
    }
  }
  .row {
    @include flexbox();
    @include flex-direction(row);
    @include align-content(center);
    @include justify-content(center);
    >.credits,
    > section {
      @include flex(0, 1, 670px);
      @include flexbox();
      @include flex-direction(column);
      padding: 20px;
    }
  }
  .why-maquette > section {
    >h2 {
      margin-top: 40px;
    }
    > h1,
    > h2,
    > a.button {
      @include align-self(center);
    }
    > a.button {
      @include align-self(center);
      margin: 20px 0;
      padding: 8px 28px;
    }
  }
  .news {
    > ul {
      margin: 0;
      padding: 0;
      list-style: none;
      > li {
        list-style: none;
        @include flexbox();
        @include flex-direction(row);
        .date {
          border-right: 1px solid #EAEAEA;
          padding: 8px 20px 0 0;
          width: 150px;
          margin: 10px 20px 10px 0;
        }
        a {
          text-decoration: none;
          :hover {
            text-decoration: underline;
          }
        }
        p {
          max-width: 670px;
          > a {
            text-decoration: underline;
          }
        }
      }
    }
    .more-news {
      margin-left: 132px;
    }
  }
}

